appId: com.dovo.studio
---
- runFlow: open-devices.yaml
- repeat:
    while:
      visible: 'Manage .+'
    commands:
      - tapOn:
          text: 'Manage .+'
          index: 0
      - scrollUntilVisible:
          element:
            id: Forget computer
          direction: DOWN
          centerElement: true
      - tapOn: Forget computer
      - tapOn:
          text: Forget

- tapOn:
    id: Connect a computer
